--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -26,6 +26,8 @@
     box-sizing: border-box;
     font-family: 'Monstserrat', sans-serif;
     list-style: none;
+    scroll-behavior: smooth;
+    scroll-margin-top: 15ex;
 }
 
 main{
