--- a/scss/utils/_utils.scss
+++ b/scss/utils/_utils.scss
@@ -2,9 +2,9 @@
 $colorPrimario: #B8FF65;
 $colorSecundario: #B8FF65;
 $items: black;
-$fondo: #ffff;
-$colorNav: #ffff;
-$colorFooter: #131231;
+$fondo: #f9fbfc;
+$colorNav: #f9fbfc;
+$colorFooter: #000;
 $colorBorde: #1f1f3b;
 $colorXbox: #189e02;
 $colorPlaystation: #0055d1;
