--- a/scss/components/footer.scss
+++ b/scss/components/footer.scss
@@ -1,57 +1,35 @@
 footer {
   background-color: $colorFooter;
   border-radius: 40px 40px 0px 0px;
-  padding: 40px 20px 5px 20px;
+  padding: 40px 0px 0px 0px;
   border-top: 2px solid $colorBorde;
-
-  .derechos {
-    color: white;
-    text-align: center;
-  }
-  
-  .contenedor {
-    @include grid(repeat(2, 1fr), 20px, flex-start, center);
-
-    :first-child {
-      grid-column: 1/3;
-    }
-
-    :last-child {
-      grid-column: 1/3;
-    }
-  
-    .seccion-footer {
-      color: white;
-      @include flex("", flex-start, column, 5px);
-
-      .redes {
-        padding: 5px 0px;
-        font-size: 28px;
-        @include flex("", center, row, 40px);
+  .wrapper{
+    padding: 20px 30px 0px 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 30px;
+    .footer-wrapper{
+      display: flex;
+      justify-content: space-between;
+      padding: 0px 40px;
+      nav div ul{
+        display: flex;
+        align-items: center;
+        gap: 25px;
+        font-size: 18px;
       }
     }
-
-    @include query(sm) {
-      grid-template-columns: 250px repeat(2, 110px);
-      justify-content: space-evenly;
-      
-      :first-child {
-        grid-column: auto;
-      }
-      :last-child {
-        grid-column: 1/4;
-      }
-    }
-
-    @include query(md) {
-      grid-template-columns: 290px repeat(3, 110px);
-
-      :first-child {
-        grid-column: auto;
-      }
-      :last-child {
-        grid-column: auto;
-      }
+    .footer-bottom{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-top: solid 1px gray;
+      padding: 30px 0px 10px 0px; 
     }
   }
+}
+
+.icon-footer{
+  font-size: 22px;
 }
