--- a/scss/pages/index.scss
+++ b/scss/pages/index.scss
@@ -21,16 +21,84 @@
             font-size: 1.2rem;
         }
     }
-    .next-section{
-        border: 1px solid black;
-        background-color: black;
-        padding: 1rem 1.2rem;
-        border-radius: 2rem;
-        &:hover{
-            background-color: #B8FF65;
-            i{
-                color: black;
+}
+.next-section{
+    border: 1px solid black;
+    background-color: black;
+    padding: 1rem 1.2rem;
+    border-radius: 2rem;
+    &:hover{
+        background-color: #B8FF65;
+        i{
+            color: black;
+        }
+    }
+}
+
+.radio{
+    margin: 30px 0px;
+    .contenedorRadio{
+        max-width: 1200px;
+        margin: 0 auto;
+        display: grid;
+        align-items: center;
+        gap: 20px;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(3, 150px);
+        grid-template-areas: 
+            "texto texto transmicion transmicion"
+            "texto texto transmicion transmicion"
+            "texto texto reproductor reproductor";
+        .texto{
+            grid-area: texto;
+        }
+        .transmicion{
+            grid-area: transmicion;
+            border-radius: 5px;
+            overflow: hidden;
+        }
+    }
+}
+
+.galeria{
+    margin: 30px 0px;
+    .contenedorGaleria{
+        max-width: 1200px;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-areas: 
+            "cover cover cover foto6"
+            "foto4 foto5 foto3 foto2";
+        gap: 3px;
+        border-radius: 10px;
+        overflow: hidden;
+        & > div{
+            transition: all 200ms;
+            &:hover{
+                transform: scale(1.03);
             }
+        }
+        .estudio{
+            grid-area: cover;
+        }
+        .foto2{
+            grid-area: foto2;
+            img{
+                object-fit: cover;
+            }
+        }
+        .foto3{
+            grid-area: foto3;
+        }
+        .foto4{
+            grid-area: foto4;
+        }
+        .foto5{
+            grid-area: foto5;
+        }
+        .foto6{
+            grid-area: foto6;
         }
     }
 }
